Updating intro/header

--- a/_includes/header/introduction.html
+++ b/_includes/header/introduction.html
@@ -5,8 +5,8 @@
                 <div class="span6 intro">
                     <div class="leader">
                         <a href="" id="logo"></a>
-                        <h1></h1>
-                        <p></p>
+                        <h1>I, Veygman</h1>
+                        <p>A blog about stuff</p>
                     </div>
                 </div>
             </div>{% include header/newer-older.html %}
