--- a/_includes/header/introduction.html
+++ b/_includes/header/introduction.html
@@ -9,7 +9,7 @@
                         <p>A blog about stuff</p>
                     </div>
                 </div>
-            </div>{% include header/newer-older.html %}
+            </div>
         </div>
     </div>
 </div>
