Changing background color

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(254, 243, 161);
+    background-color: #F8F8FF;
     color: #555D50;
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 }
