--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -35,4 +35,6 @@ a.header:hover {
     line-height: 18px;
     color: #333;
     background-color: #E3DAC9;
+    border-radius: 6px;
+    border: 0px;
 }
