--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -37,4 +37,6 @@ a.header:hover {
     background-color: #E3DAC9;
     border-radius: 12px;
     border: 0px;
+    margin-left: 19.1%;
+    margin-right: 19.1%;
 }
