Messing with the header a bit more

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,9 +34,9 @@ a.header:hover {
     font-size: 13px;
     line-height: 18px;
     color: #333;
-    background-color: #E3DAC9;
+    background-color: #DFDFE6;
     border-radius: 12px;
     border: 0px;
-    margin-left: 19.1%;
-    margin-right: 19.1%;
+    margin-left: 15%;
+    margin-right: 15%;
 }
