--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -126,7 +126,7 @@ code {
 }
 
 .sidebar h2 {
-    background-color: #C6C6CC;
+    background-color: #005580;
     color: white;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
     border-radius: 6px;
