--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,4 @@
+/* 
 [class^="icon-"], [class*=" icon-"] {
     background-image: none;
 }
@@ -9,7 +10,7 @@ margin-top: -1px;
 .btn [class^="icon-"] {
     margin-top:2px;
 }
-
+ */
 
 a {
     color: #005580;
