Revert "Modifying body style"
This reverts commit 2c6701b7c7b82a1b86f8160487590cef462a39f6.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,9 +31,7 @@ blockquote {
 body {
     margin-bottom: 60px;
     padding-top:60px;
-    background-color: #F8F8FF;
-    color: #555D50;
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    background-image: url('/background.png');
 }
 
 .container {
