--- a/_includes/assets/css/default.html
+++ b/_includes/assets/css/default.html
@@ -1,1 +1,2 @@
+<link href="/vendor/google-code-prettify/google-code-prettify/prettify.css" rel="stylesheet">
 <link href="/assets/css/main.css" rel="stylesheet">
