--- a/_includes/assets/js/default.html
+++ b/_includes/assets/js/default.html
@@ -1,2 +1,3 @@
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
 
