Changing header size

--- a/_includes/sidebar/about.html
+++ b/_includes/sidebar/about.html
@@ -1,11 +1,10 @@
 <div class="about well">
-
-        <h2>
+        <h4>
             <i class="icon-question-sign"></i> 
             What is Going on Here?
-        </h2>
+        </h4>
         <p>
-            <strong></strong>
+            <strong>Put stuff here</strong>
         </p>
         <p>
         </p>
