--- a/_includes/sidebar/about.html
+++ b/_includes/sidebar/about.html
@@ -1,5 +1,5 @@
 <div class="about well">
-        <h4>
+        <h4 class="well">
             <i class="icon-question-sign"></i> 
             What is Going on Here?
         </h4>
