--- a/_includes/sidebar/repositories.html
+++ b/_includes/sidebar/repositories.html
@@ -1,5 +1,5 @@
 <div class="well">
-    <h4><i class="icon-github-sign"></i> Stay up to Date</h4>
+    <h4 class="well"><i class="icon-github-sign"></i> Stay up to Date</h4>
     <ul class="repository-list">
         <li><i class="icon-github"></i> <a href="https://github.com/iveygman">github</a></li>
         <li class="icon"><a href="/subscribe">More</a></li>
