--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -37,9 +37,8 @@ h4.well {
 .archive-link{
     font-size: 24px;
     line-height: 36px;
-    margin-left:60px;
     display:block;
-    border-top:5px solid #eee;
+    border-top:2px solid #000;
     padding: 20px 0;
 }
 
