--- a/_includes/sidebar/about.html
+++ b/_includes/sidebar/about.html
@@ -1,12 +1,13 @@
 <div class="about well">
         <h4 class="well">
             <i class="icon-question-sign"></i> 
-            What is Going on Here?
+           What Is This? 
         </h4>
         <p>
-            <strong>Put stuff here</strong>
+            <strong>I, Veygman is my personal blog/site</strong>
         </p>
         <p>
+            I'm a jack-of-all-trades software developer and electrical engineer. I like to work on random things that seem interesting
         </p>
         <a href="/about.html">See more.</a>
 </div>
